--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:text="@string/no_notes"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
+        android:divider="@null"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
