--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,9 +2,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.akbar26.neatnotes.MainActivity">
+
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/app_bar_search"
+        android:icon="@drawable/ic_action_search"
+        app:showAsAction="always"
+        android:title="Search"
+        app:actionViewClass="android.support.v7.widget.SearchView"/>
+
 </menu>
